# vite-plugin-barrel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.changeset/: brown-clocks-battle.md  config.json  curly-items-learn.md  dry-hairs-protect.md  flat-drinks-report.md  gold-roses-swim.md  good-donkeys-tease.md  itchy-deers-lie.md  mean-keys-wonder.md  six-pigs-flow.md  spicy-plums-punch.md  thick-icons-compete.md  wicked-garlics-hang.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yaml  snapshot-release.yml
e2e/: scripts.ts
playgrounds/vite4-project/: package.json  vite.config.ts
playgrounds/vite4-project/src/: App.tsx
playgrounds/vite5-project/: package.json  vite.config.ts
playgrounds/vite5-swc-project/: package.json  vite.config.ts
playgrounds/vite5-swc-project/src/: App.tsx
src/: lib.rs
src/swc_barrel/: mod.rs
src/swc_named_import_transform/: mod.rs
src/swc_relative_import_transform/: mod.rs
tests/: fixture.rs
tests/fixture/basic/1/: input.ts  output.ts
tests/fixture/named-imports/1/: output.ts
tests/fixture/relative-imports/1/: output.ts
tests/fixture/relative-imports/2/: input.ts
tests/fixture/transform-imports/1/: input.ts  output.ts
tests/fixture/wildcard/1/: input.ts  output.ts
vite-plugin/: CHANGELOG.md  README.md  package.json  rollup.config.mjs  tsconfig.dts.json  tsconfig.json
vite-plugin-barrel/: README.md  package.json  rollup.config.mjs  tsconfig.dts.json  tsconfig.json
vite-plugin-barrel/src/: constants.ts  plugin.ts  utils.ts
vite-plugin-barrel/test/: main.test.ts
vite-plugin/src/: constants.ts  plugin.ts  utils.ts
vite-plugin/src/exports/: index.ts
vite-plugin/test/: utils.test.ts
