[package]
name = "swc_plugin_barrel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
swc_core = { version = "0.82.*", features = ["ecma_plugin_transform"] }
swc_ecma_visit = "0.96.0"

[dev-dependencies]
swc_core = { version = "0.82.*", features = ["ecma_plugin_transform", "testing_transform"] }
testing = "0.35.2"
# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
